# axum_1ex

./: README.md
csr1/: Cargo.toml  README.md
csr1/src/: main.rs
excel_3/: Cargo.toml  README.md
excel_3/public/: test.js
excel_3/src/: main.rs
mail_1/: Cargo.toml
mail_1/src/: main.rs
mcp_2/: .env.example  Cargo.toml  README.md
mcp_2/src/: main.rs  mod_purchase.rs
postgres5/: Cargo.toml
postgres5/src/: handlers.rs  main.rs
react1/: README.md  package.json  vite.config.ts
react1/src/: client.tsx  main.rs
react1/src/client/: home.tsx
react11_adk/: Cargo.toml  README.md  package.json
react11_adk/src/: database.rs  main.rs  models.rs
react11_adk/src-ts/: client.tsx
react11_adk/src-ts/client/: home.tsx
react11_adk/src-ts/client/lib/: AgentUtil.ts
react2_sqlite/: README.md  package.json  scheme.sql
react2_sqlite/src/: App.tsx  client.tsx  main.rs  mod_sqlite.rs
react5_todo/: Cargo.toml  nodemon.json  package.json  scheme.sql
react5_todo/src/: App.tsx  api.ts  main.rs  mod_sqlite.rs
react5_todo/src/components/: ItemForm.tsx  Modal.tsx
react6_pg/: Cargo.toml  nodemon.json
react6_pg/src/: main.rs
react6_pg/src-ts/: client.tsx
react7_pg/: Cargo.toml
react7_pg/src/: main.rs
react7_pg/src-ts/: App.tsx
react9_excel/: Cargo.toml
react9_excel/src/: handlers.rs  main.rs  models.rs
react9_excel/src-ts/: App.tsx
react9_excel/src-ts/components/: TodoDialog.tsx  TodoList.tsx
routes/: Cargo.toml
routes/src/: main.rs
ssr1/: README.md
ssr1/public/: index.html
ssr1/src/: main.rs
