[package]
name = "excel_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["fs"] }
umya-spreadsheet = "2.3.1"
uuid = { version = "1.8.0", features = ["v4"] }