[package]
name = "axum_ecxel"
version = "0.1.0"
authors = ["naka"]
edition = "2024"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
umya-spreadsheet = "2.3.1"
uuid = { version = "1.8.0", features = ["v4"] }
